# root2parquet

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt  MTASTotalsDataBuilder.hpp  PIDDataBuilder.hpp  SiPMSummaryDataBuilder.hpp  bigrips2parquet.cpp  bigripsData.h  briken2parquet.cpp  brikenData.h  linkdef_user.h  paass2parquet.cpp  parquet2root.cpp  root2parquet.cpp  temp.txt
